tests/ui/group_span.stderr
error[E0308]: mismatched types
 --> tests/ui/group_span.rs:3:5
  |
2 | fn bar() -> u32 {
  |             --- expected `u32` because of return type
3 |     ()
  |     ^^ expected `u32`, found `()`
