tests/ui/group_span.rs
#[culit::culit]
fn bar() -> u32 {
    ()
}

fn main() {}
